src/sass/components/_all.scss
$font-stack: Source Sans Pro, sans-serif;
$red: #F16A6F;
$purple: #8E7E8E;
$darkBlue: #022F5A;
$blue: #5F9EDF;
$teal: #62D0DB;
$grey: #D7D8DA;
$darkGrey: #CCC;
$darkestGrey: #666;
$black: #000;
$white: #FFF;
$error: #D83B31;
$highlight: $teal;

/* Social media colors */
$twitter: #00aced;
$facebook: #3b5998;
$linkedin: #007bb6;
$instagram: #bc2a8d;

.primaryText {
  color: $red;
}

.primaryBackground {
  background-color: $red;
}

.secondaryText {
  color: $purple;
}

.secondaryBackground {
  background-color: $purple;
}


body {
  font: 100% $font-stack;
  color: $black;
  text-align: center;
}

* {
  // Necessary to register onClick for iOS... ya.
  cursor: pointer;
}

$h1-font-sizes: (
  null  : 8vw,
  460px : 40px,
  1024px : 48px
);

h1 {
  @include font-size($h1-font-sizes);
}

$h2-font-sizes: (
  null  : 6vw,
  460px : 32px,
  1024px : 36px
);

h2 {
  @include font-size($h2-font-sizes);
}

$h3-font-sizes: (
  null  : 24px,
  460px : 24px,
  1024px : 28px
);

h3 {
  color: $darkGrey;
  @include font-size($h3-font-sizes);
}

$h4-font-sizes: (
  null  : 20px,
  460px : 20px,
  1024px : 24px
);

h4 {
  color: $black;
  @include font-size($h4-font-sizes);
}

$p-font-sizes: (
  null  : 16px,
  480px : 16px,
  1024px : 20px
);

p, body, div, a {
  @include font-size($p-font-sizes);
}

a {
  color: $black;
  text-decoration: none;

  &:hover {
    color: $black;
    text-decoration: none;
  }
}

.navbar {
  background-image: none !important;
  border: none;

  li {
    font-size: 16px;
  }
}

.contentContainer {
  margin: 60px 20px;
}

.Select-control {
  font-size: 12px;

  input {
    border: none;
    vertical-align: middle;
  }

  &.search-input > input {
    padding-left: 10px;
    width: 100%;
    height: 100%;

    &:focus{
      outline: none;
    }
  }
}

.searchBar {
  margin: 20px 0px;
}

.sortContainer {
  display: table;

  .directionButton {
    display: block;
    width: 50px;
    background: none;
    border: none;
    font-size: 24px;

    &:active, &:focus {
      outline: none;
    }
  }

  .sortComponent {
    display: table-cell;
    width: 100%;
    margin: 0px !important;
  }
}

.visible {
  display: inherit;
}

.hidden {
  display: none;
}

.largeTopMargin {
  margin-top: 50px !important;
}

button:not([class^='theme__button']) {
  font-size: 16px;
  padding: 10px 15px !important;
  background-image: none !important;
  border: none !important;
  border-radius: 5px !important;
  margin: 10px !important;
  color: white !important;

  &:hover {
    background-color: $darkestGrey !important;
  }

  &:disabled {
    background-color: $grey !important;
  }

  &.auth0-lock-social-button {
    padding: 0 !important;
  }
}

#loginContainer {
  width: 250px;
  height: 250px;
  margin-left: auto;
  margin-right: auto;

  .logo {
    position: relative;
    margin-bottom: 30px;
    margin-top: 50px;
    width: 100%;
    height: 100%;

    .logoC {
      height: 100%;
      width: 100%;
      border-radius: 100%;
      position: absolute;
      top: 0;
      left: 0;
    }

    .rest {
      height: 70%;
      width: 80%;
      border-radius: 100%;
      background-color: white;
      position: absolute;
      left: 30%;
      top: 15%;
      display: flex;
      align-items: center;
      padding-left: 20px;
      font-family: 'Rubik Mono One', sans-serif;
      font-size: 23px;
    }
  }
}

.sidebarLink {
  color: white !important;
}

[class^="theme__dialog"] {
  overflow: scroll;

  h6 {
    font-size: 40px;
    margin-bottom: 30px;
  }
  .conferenceElement {
    display: inline-block;
    vertical-align: top;
    margin: 20px;
    width: 200px;

    img {
      height: 100px;
    }
  }

  button {
    border-radius: .2rem !important;
    padding: 0 1.2rem !important;

    &:hover {
      background: rgba(33,33,33,.2) !important;
    }
  }

  @media screen and (max-width: 1000px) {
	h3 {
	  font-size: 18px;
	}
	.conferenceElement {
	  margin: 20px 10px;
	  width: 100px;

	  img {
		height: 60px;
	  }
	}
  }
}

.outlined {
  -webkit-text-stroke-width: 0.5px;
  -webkit-text-stroke-color: white;
}

.disabled {
  pointer-events: none;
  opacity: 0.3;
}

